メールによるリセットはできないのでフォーム削除

--- a/_core/skin/_common/form.html
+++ b/_core/skin/_common/form.html
@@ -59,29 +59,11 @@
     <article>
       <section class="form">
         <h2>IDを確認する</h2>
-        <p>入力したメールアドレスに、IDを送信します。</p>
-        <form method="post" action="./">
-          <input type="hidden" name="mode" value="reminder">
-          <p>
-            <label><span>メールアドレス</span> <input type="mail" name="mail" required></label>
-          </p>
-          <p>
-            <input type="submit" value="送信">
-          </p>
-        </form>
+        <p>管理者に問い合わせてください。</p>
       </section>
       <section class="form">
         <h2>パスワードをリセットする</h2>
-        <p>登録されたメールアドレスにリセット用のURLを送信します。</p>
-        <form method="post" action="./">
-          <input type="hidden" name="mode" value="reminder">
-          <p>
-            <label><span>ＩＤ</span> <input type="text" name="id" required></label>
-          </p>
-          <p>
-            <input type="submit" value="送信">
-          </p>
-        </form>
+        <p>管理者に問い合わせてください。</p>
       </section>
     </article>
   </TMPL_IF>
